--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1526,6 +1526,10 @@ footer {
         align-items: center;
     }
 
+    .newsletter {
+        align-items: center;
+    }
+
     .newsletter-button {
         flex-direction: column;
         align-items: center;
@@ -1636,3 +1640,4 @@ footer {
         height: 26px;
     }
 }
+
